Change UI in account page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -148,4 +148,16 @@ background-color: #01538d \9;
 #my-timeline {
   float: left;
 }
+#account_table
+{
+  background-color:white;
+  color:black;
+  padding: 5px 12px 4px 7px;
+}
+.account_page{
+  p{
+    font-size:16px;
+    margin-left: 10px;
+   }
+}
 
