--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -160,4 +160,22 @@ background-color: #01538d \9;
     margin-left: 10px;
    }
 }
+.events {
+  
+}
+.eventtitle {
+  background-color:#DBDBDB;
+  float: left;
+  border: 1px solid #999;
+  padding: 5px;
+  width: 26%;
+}
 
+.eventaction {
+  background-color: #999;
+border: 1px solid #999;
+color: white;
+padding: 5px;
+display: inline-block;
+width: 70%;
+}
