--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,14 +36,14 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <div id="fb-root"></div>
-      <script>/*(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));*/</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
@@ -105,7 +105,7 @@
           <%= yield %>
 
       </div><!--/row-->
-<%# yield :scripts %>
+<%= yield :scripts %>
       <footer>
         <p>&copy; Notice 2013</p>
       </footer>
