--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -10,7 +10,10 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="field">
+    <%= f.label :title %><br/>
+    <%= f.text_field :title %>
+  </div>
   <div class="field">
     <%= f.label :body %><br />
     <%= f.cktext_area :body, :ckeditor => {:language => "en", :toolbar => "mini"} %>
