--- a/app/views/notice_displays/_notice_event_contact_fields.html.erb
+++ b/app/views/notice_displays/_notice_event_contact_fields.html.erb
@@ -18,3 +18,7 @@
           <%# f.label :notice_display_id %><br />
           <%= f.hidden_field :notice_display_id %>
         </div>
+        <div class="field">
+          <%# f.check_box :_destroy %>
+          <%# f.label :_destroy %>
+        </div>
