--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,14 +36,6 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
@@ -53,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="http://localhost:3000"><%= image_tag('ninaivu_logo.png') %></a>
+          <a class="brand" href="http://ninaivu.7zero.com:3000"><%= image_tag('ninaivu_logo.png') %></a>
             <div class="container-fluid nav-collapse">
               <ul class="nav">
                 <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
