--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -1,14 +1,71 @@
+<div class="span12">
+  <div class="span5 notice">
+    <h3 class="center">அமரர்</h3>
+<h1 class="center">
+  <%= @orbituarysite.name %>
+</h1>
+<p></p>
+<p>
+  <a href="#">
+  <%= image_tag(@orbituarysite.orbiturerimage_url, :class => "image_left_side") if @orbituarysite.orbiturerimage? %>
+  <% if @orbituarysite.frame == '1' %>
+    <%= image_tag('flower_frames_1.png', :class => "left_side_frame") %>
+  <% elsif @orbituarysite.frame == '2' %>
+    <%= image_tag('flower_frames_5.png', :class => "left_side_frame") %>
+  <% else %>
+    <%= image_tag('flower_frames_5.png', :class => "left_side_frame") %>
+  <% end %>
+  </a>
+</p>
+<h4 class="center"><%= @orbituarysite.slogan %></h4>
+<h4 class="center">
+  <%= @orbituarysite.dob.strftime("%d-%b-%Y") %>-
+  <%= @orbituarysite.dod.strftime("%d-%b-%Y") %>
+</h4>
+<h4 class="center">
+பிறந்த இடம்: 
+</h4>
+
+<h4 class="center">
+  <%= @orbituarysite.birth_place %>
+</h4>
+<h4 class="center">
+வாழ்ந்த இடம்: 
+</h4>
+<h4 class="center">
+  <%= @orbituarysite.living_place %>
+</h4>
+<h4 class="center">
+இறைவனடி சேர்ந்த இடம்: 
+</h4>
+
+<h4 class="center">
+  <%= @orbituarysite.death_place %>
+</h4>
+<p>
+<% if user_signed_in? %>
+  <% if current_user.id == @orbituarysite.user_id %>
+    <%= link_to 'Edit', edit_orbituarysite_path(@orbituarysite), :class => "btn btn-default pull-right color_black" %> 
+    <%= link_to 'Destroy', @orbituarysite, :class => "btn btn-danger pull-right color_white", method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+<% end %>
+</p>
+<br />
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://localhost:3000/orbituarysites/1" data-text=<%= @orbituarysite.name %> data-via="anbublacky">Tweet</a>
+<script>/*!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');*/</script>
+
+<div class="fb-like" data-href="http://notice.tamil.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+
+</div>
+<div class="span7">
 
 <p>
-  <b>Body:</b>
-  <%= @memory.body %>
-</p>
-
-<p>
-  <b>Orbituarysite:</b>
-  <%= @memory.orbituarysite_id %>
+  <b><%= @memory.title %></b>
+  <%= raw(@memory.body) %>
 </p>
 
 
-<%= link_to 'Edit', edit_memory_path(@memory) %> |
-<%= link_to 'Back', memories_path %>
+<%# link_to 'Edit', edit_memory_path(@memory) %> |
+<%# link_to 'Back', memories_path %>
+</div>
+</div>
