changes to maps

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,6 @@
  *= require colorbox-rails
  *= require timelineJS/timeline
  *= require gmaps4rails
+ *= require leaflet
  *= require_tree .
  */
